# discord-rpc

./: CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
include/: discord_rpc.h
src/: CMakeLists.txt  connection_unix.cpp  connection_win.cpp  discord_register_linux.cpp  discord_register_osx.m  discord_register_win.cpp  discord_rpc.cpp  msg_queue.h  rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h
